--- a/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -4,20 +4,15 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual
-          Manual</title>
+        <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual Manual</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­dhāraṇī kalpasahitā</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas pa</title>
         <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas
-          pa</title>
-        <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā
-          Dhāraṇī with Its Ritual Manual</title>
-        <title type="longTitle" xml:lang="Sa-Ltn">Sarva­tathāgatoṣṇīṣavijayā­nāma­dhāraṇī
-          kalpasahitā</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
+        <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā Dhāraṇī with Its Ritual Manual</title>
+        <title type="longTitle" xml:lang="Sa-Ltn">Sarva­tathāgatoṣṇīṣavijayā­nāma­dhāraṇī kalpasahitā</title>
         <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
+        <title type="otherTitle" xml:lang="zh">《佛說一切如來烏瑟膩沙最勝總持經》</title>
         <author role="translatorMain" ref="eft:team-55">Translated by Catherine Dalton<lb/>under the
           patronage and supervision of 84000: Translating the Words of the Buddha</author>
         <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
@@ -29,7 +24,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -65,7 +60,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-19T11:43:59.844Z" user="admin">19/07/2022 11:43:59</note>
+        <note type="lastUpdated" date-time="2022-07-26T07:34:50.742Z" user="admin">26/07/2022 07:34:50</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-16T08:20:54.493Z" user="line-tofte">Auto (update-contributors)</note>
@@ -97,12 +92,13 @@
         <note type="updated" update="text-version" value="0.0.14" date-time="2022-06-03T08:48:32.113Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="translation-status" value="2" date-time="2022-06-24T09:48:34.74Z" user="line-tofte">2</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-24T09:48:34.74Z" user="line-tofte">Auto (update-publication-status)</note>
-          <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-24T09:49:54.256Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="1.a" date-time="2022-07-04T10:03:16.341Z" user="sameer">1.a</note>
-          <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-04T10:03:16.341Z" user="sameer">First published version</note>
-          <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-06T11:52:41.388Z" user="martina-cotter">Updates through revisions.</note>
-          <note type="updated" update="translation-status" value="1" date-time="2022-07-19T11:43:52.174Z" user="sameer">1</note>
-          <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-19T11:43:52.174Z" user="sameer">Auto (update-publication-status)</note>
+        <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-24T09:49:54.256Z" user="line-tofte">Auto (update-contributors)</note>
+        <note type="updated" update="translation-status" value="1.a" date-time="2022-07-04T10:03:16.341Z" user="sameer">1.a</note>
+        <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-04T10:03:16.341Z" user="sameer">First published version</note>
+        <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-06T11:52:41.388Z" user="martina-cotter">Updates through revisions.</note>
+        <note type="updated" update="translation-status" value="1" date-time="2022-07-19T11:43:52.174Z" user="sameer">1</note>
+        <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-19T11:43:52.174Z" user="sameer">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="1.0.3" date-time="2022-07-26T07:34:43.072Z" user="cabie-sim">Auto (update-titles)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
