--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -4,22 +4,16 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual
-          Manual</title>
+        <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī with Its Ritual Manual</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayādhāraṇī kalpasahitā</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas
-          pa</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas pa</title>
         <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā
-          Dhāraṇī with Its Ritual Manual</title>
-        <title type="longTitle" xml:lang="Sa-Ltn">Sarvatathāgata-uṣṇīṣavijayānāmadhāraṇī
-          kalpasahitā</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
+        <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā Dhāraṇī with Its Ritual Manual</title>
+        <title type="longTitle" xml:lang="Sa-Ltn">Sarvatathāgata­uṣṇīṣavijayānāmadhāraṇī kalpasahitā</title>
         <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
-        <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa/</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
+        <title type="otherTitle" xml:lang="zh">《佛說一切如來烏瑟膩沙最勝總持經》</title>
+        <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa/</title>
         <author role="translatorMain" ref="eft:team-55">Translated by Catherine Dalton<lb/>under the
           patronage and supervision of 84000: Translating the Words of the Buddha</author>
         <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
@@ -31,7 +25,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -65,7 +59,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-11T08:23:38.586Z" user="admin">11/07/2022 08:23:38</note>
+        <note type="lastUpdated" date-time="2022-07-26T07:35:41.271Z" user="admin">26/07/2022 07:35:41</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">Auto
@@ -110,8 +104,9 @@
         <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-04T09:57:45.104Z" user="sameer">First published version</note>
         <note type="updated" update="translation-status" value="2" date-time="2022-07-04T10:00:46.847Z" user="sameer">2</note>
         <note type="updated" update="text-version" value="0.0.03" date-time="2022-07-04T10:00:46.847Z" user="sameer">0.0.03</note>
-          <note type="updated" update="translation-status" value="1.a" date-time="2022-07-11T08:23:31.074Z" user="sameer">1.a</note>
-          <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-11T08:23:31.074Z" user="sameer">First published version</note>
+        <note type="updated" update="translation-status" value="1.a" date-time="2022-07-11T08:23:31.074Z" user="sameer">1.a</note>
+        <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-11T08:23:31.074Z" user="sameer">First published version</note>
+          <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-26T07:35:33.521Z" user="cabie-sim">Auto (update-titles)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
