--- a/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
+++ b/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
@@ -4,25 +4,17 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā
-                                        Dhāraṇī</title>
+                                <title type="mainTitle" xml:lang="en">The Uṣṇīṣavijayā Dhāraṇī</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Uṣṇīṣavijayā­nāma­dhāraṇī</title>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam par rgyal
-                                        ba zhes bya ba’i gzungs</title>
                                 <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས།</title>
-                                <title type="longTitle" xml:lang="en">The Noble Uṣṇīṣavijayā Dhāraṇī
-                                        That Purifies All Lower Rebirths</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam par rgyal ba zhes bya ba’i gzungs</title>
+                                <title type="longTitle" xml:lang="en">The Noble Uṣṇīṣavijayā Dhāraṇī That Purifies All Lower Rebirths</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sarva­durgati­pariśodhaniuṣṇīṣavijayā­nāma­dhāraṇī</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams
-                                        cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya
-                                        ba’i gzungs</title>
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ངན་འགྲོ་ཐམས་ཅད་ཡོངས་སུ་སྦྱོང་བ་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས།</title>
-                                <title type="otherTitle" xml:lang="Sa-Ltn">sarva­durgatipariśodhany
-                                        uṣṇīṣavijayānāma­dhāraṇī</title>
-                                <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams
-                                        cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya
-                                        ba’i gzungs/</title>
-                                <title type="otherTitle" xml:lang="zh">最勝佛頂陀羅尼經</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya ba’i gzungs</title>
+                                <title type="otherTitle" xml:lang="Sa-Ltn">sarva­durgatipariśodhany uṣṇīṣavijayānāma­dhāraṇī</title>
+                                <title type="otherTitle" xml:lang="zh">《最勝佛頂陀羅尼經》</title>
+                                <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya ba’i gzungs/</title>
                                 <author role="translatorMain" ref="eft:team-65">Translated by
                                         Patrick Lambelet and Caley Smith<lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
@@ -45,7 +37,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -101,7 +93,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-15T10:59:27.284Z" user="admin">15/07/2022 10:59:27</note>
+                                <note type="lastUpdated" date-time="2022-07-26T07:36:23.684Z" user="admin">26/07/2022 07:36:23</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:50:56.094Z" user="line-tofte">Auto
@@ -137,8 +129,9 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T09:56:32.459Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="1.a" date-time="2022-07-15T10:59:19.387Z" user="sameer">1.a</note>
-                            <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-15T10:59:19.387Z" user="sameer">First published version</note>
+                                <note type="updated" update="translation-status" value="1.a" date-time="2022-07-15T10:59:19.387Z" user="sameer">1.a</note>
+                                <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-15T10:59:19.387Z" user="sameer">First published version</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-26T07:36:16.022Z" user="cabie-sim">Auto (update-titles)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
