--- a/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
+++ b/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
@@ -13,7 +13,7 @@
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ངན་འགྲོ་ཐམས་ཅད་ཡོངས་སུ་སྦྱོང་བ་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས།</title>
                                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya ba’i gzungs</title>
                                 <title type="otherTitle" xml:lang="Sa-Ltn">sarva­durgatipariśodhany uṣṇīṣavijayānāma­dhāraṇī</title>
-                                <title type="otherTitle" xml:lang="zh">《最勝佛頂陀羅尼經》</title>
+                                <title type="otherTitle" xml:lang="zh">《頂髻勝陀羅尼》（大正藏：《最勝佛頂陀羅尼經》）</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa ngan ’gro thams cad yongs su sbyong ba gtsug tor rnam par rgyal ba zhes bya ba’i gzungs/</title>
                                 <author role="translatorMain" ref="eft:team-65">Translated by
                                         Patrick Lambelet and Caley Smith<lb/>under the patronage and
@@ -37,7 +37,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -93,7 +93,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-26T07:36:23.684Z" user="admin">26/07/2022 07:36:23</note>
+                                <note type="lastUpdated" date-time="2022-07-26T07:39:41.846Z" user="admin">26/07/2022 07:39:41</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:50:56.094Z" user="line-tofte">Auto
@@ -131,7 +131,8 @@
                                         (update-contributors)</note>
                                 <note type="updated" update="translation-status" value="1.a" date-time="2022-07-15T10:59:19.387Z" user="sameer">1.a</note>
                                 <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-15T10:59:19.387Z" user="sameer">First published version</note>
-                            <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-26T07:36:16.022Z" user="cabie-sim">Auto (update-titles)</note>
+                                <note type="updated" update="text-version" value="1.0.1" date-time="2022-07-26T07:36:16.022Z" user="cabie-sim">Auto (update-titles)</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2022-07-26T07:39:34.204Z" user="cabie-sim">Auto (update-titles)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
