--- a/translations/kangyur/placeholders/091-079_toh681-the_web_of_lotuses_the_root_tantra_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/091-079_toh681-the_web_of_lotuses_the_root_tantra_of_avalokitesvara.xml
@@ -3,17 +3,21 @@
 <TEI xmlns="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
-            <titleStmt sponsored="full">
-                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs kyi rtsa rgyud pad+ma dra ba/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">avalokiteśvarapadmajāla­mūlatantrarāja</title>
+            <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Web of Lotuses, the Root Tantra of Avalokiteśvara</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi rtsa ba'i rgyud kyi rgyal po pad+ma dra ba zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvara­padmajāla­mūlatantrarājanāma</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">avalokiteśvarapadmajāla­mūlatantrarāja</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs kyi rtsa rgyud pad+ma dra ba/</title>
                 <title type="otherTitle" xml:lang="en">[Note: our translation follows the Tibetan, as the Sanskrit word order is dubious.]</title>
-                <title type="otherTitle" xml:lang="zh">觀自在根本續王蓮華網</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvara­padmajāla­mūlatantrarājanāma</title>
+                <title type="otherTitle" xml:lang="zh">《觀自在根本續王蓮華網》</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi rtsa ba'i rgyud kyi rgyal po pad+ma dra ba zhes bya ba/</title>
                 <author role="translatorMain" ref=""/>
-            <sponsor ref="sponsors.xml#sponsor-15"/>
+                <sponsor ref="sponsors.xml#sponsor-15"/>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date/>
+                </edition>
+            </editionStmt>
             <publicationStmt status="">
                 <idno xml:id="UT22084-091-079"/>
             </publicationStmt>
@@ -21,16 +25,16 @@
                 <bibl key="toh681" type="text">
                     <ref>Toh 681</ref>
                     <biblScope>vol.91, ff.224r-278r(pp.448-555)</biblScope>
-                    <location count-pages="108">
-                        <start volume="91" page="450"/>
-                        <end volume="91" page="557"/>
+                    <location work="UT4CZ5369" count-pages="108">
+                        <volume number="91" start-page="448" end-page="555"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12419" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 13/02/2019 at 08:56:34 by admin</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:40:22.982Z" user="admin">26/07/2022 07:40:22</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:40:20.975Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
