--- a/translations/kangyur/translations/092-001_toh686-the_sovereign_ritual_of_amoghapasa.xml
+++ b/translations/kangyur/translations/092-001_toh686-the_sovereign_ritual_of_amoghapasa.xml
@@ -13,7 +13,7 @@
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་དོན་ཡོད་པའི་ཞགས་པའི་ཆོ་ག་ཞིབ་མོའི་རྒྱལ་པོ།</title>
                                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa don yod pa’i zhags pa’i cho ga zhib mo’i rgyal po</title>
                                 <title type="otherTitle" xml:lang="Sa-Ltn">Amogha­pāśa­kalpa</title>
-                                <title type="otherTitle" xml:lang="zh">不空羂索神變真言經</title>
+                                <title type="otherTitle" xml:lang="zh">《不空羂索神變真言經》</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">don yod zhags pa’i cho ga zhib mo’i rgyal po</title>
                                 <author role="translatorMain" ref="eft:team-9">Translated by the Dharmachakra Translation Committee<lb/>under the
                                         patronage and supervision of 84000: Translating the Words of the Buddha</author>
@@ -31,7 +31,7 @@
                                 <sponsor ref="sponsors.xml#sponsor-38">Sun Ping, Tian Xingwen, and Sun Fanglin</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1">
@@ -78,8 +78,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-03-07T12:20:41.143Z" user="admin">07/03/2022 12:20:41</note>
-
+                                <note type="lastUpdated" date-time="2022-07-26T07:41:36.428Z" user="admin">26/07/2022 07:41:36</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-17T08:56:54.094Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2020-03-17T08:56:54.094Z" user="line-tofte">2.g</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2021-03-04T13:26:57.795Z" user="line-tofte">2.f</note>
@@ -104,17 +103,12 @@
                                         (update-contributors)</note>
                                 <note type="updated" update="text-version" value="0.0.10" date-time="2021-11-08T15:40:02.498Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="translation-status" value="2.b" date-time="2021-11-15T12:47:35.645Z" user="line-tofte">2.b</note>
-
                                 <note type="updated" update="text-version" value="0.0.11" date-time="2021-11-15T12:47:35.645Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="text-version" value="0.0.12" date-time="2021-11-19T12:28:42.379Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="translation-status" value="2.a" date-time="2021-11-19T12:30:31.838Z" user="line-tofte">2.a</note>
-
                                 <note type="updated" update="text-version" value="0.0.13" date-time="2021-11-19T12:30:31.838Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-02-10T09:40:21.673Z" user="line-tofte">Auto
@@ -129,8 +123,9 @@
                                         published version</note>
                                 <note type="updated" update="text-version" value="1.0.1" date-time="2022-03-02T20:36:50.207Z" user="laura">Auto
                                         (update-publication-status)</note>
-                            <note type="updated" update="text-version" value="1.0.2" date-time="2022-03-04T20:15:51.521Z" user="celso">added image to n. 548</note>
-                            <note type="updated" update="text-version" value="1.0.3" date-time="2022-03-07T12:20:36.775Z" user="laura">Edit to bibliography from Wiesiek</note>
+                                <note type="updated" update="text-version" value="1.0.2" date-time="2022-03-04T20:15:51.521Z" user="celso">added image to n. 548</note>
+                                <note type="updated" update="text-version" value="1.0.3" date-time="2022-03-07T12:20:36.775Z" user="laura">Edit to bibliography from Wiesiek</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2022-07-26T07:41:28.017Z" user="cabie-sim">Auto (update-titles)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
