--- a/translations/kangyur/placeholders/093-005_toh690-detailed_procedures_for_the_thousandarmed_thousandeyed_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-005_toh690-detailed_procedures_for_the_thousandarmed_thousandeyed_avalokitesvara.xml
@@ -3,15 +3,19 @@
 <TEI xmlns="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
-            <titleStmt sponsored="full">
-                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs lag stong mig stong gi cho ga zhib mo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+            <titleStmt>
                 <title type="mainTitle" xml:lang="en">Detailed Procedures for the Thousand-Armed, Thousand-Eyed Avalokiteśvara</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs lag stong mig stong gi cho ga zhib mo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa' 'phags pa spyan ras gzigs dbang phyug lag pa stong dang mig stong dang ldan pa'i cho ga zhib mo/</title>
-                <title type="otherTitle" xml:lang="zh">千手千眼觀世音菩薩詳軌（千手千眼觀世音菩薩廣大圓滿無礙大悲心陀羅尼經）</title>
+                <title type="otherTitle" xml:lang="zh">《千手千眼觀世音菩薩詳軌》（千手千眼觀世音菩薩廣大圓滿無礙大悲心陀羅尼經）</title>
                 <author role="translatorMain" ref=""/>
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E Ho Gu, Likai Gu, Lilian Gu</sponsor>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date/>
+                </edition>
+            </editionStmt>
             <publicationStmt status="">
                 <idno xml:id="UT22084-093-005"/>
             </publicationStmt>
@@ -19,16 +23,16 @@
                 <bibl key="toh690" type="text">
                     <ref>Toh 690</ref>
                     <biblScope>vol.93, ff.66r-94r(pp.131-187)</biblScope>
-                    <location count-pages="57">
-                        <start volume="93" page="133"/>
-                        <end volume="93" page="189"/>
+                    <location work="UT4CZ5369" count-pages="57">
+                        <volume number="93" start-page="131" end-page="187"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12430" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 13/02/2019 at 08:55:25 by admin</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:42:18.576Z" user="admin">26/07/2022 07:42:18</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:42:16.581Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
