--- a/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
@@ -3,17 +3,20 @@
 <TEI xmlns="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
-            <titleStmt sponsored="full">
-                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs phyag stong spyan stong gzungs/</title>
+            <titleStmt>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Thousand-Armed, Thousand-Eyed Avalokiteśvara</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of the Thousand-Armed, Thousand-Eyed Avalokiteśvara</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">spyan ras gzigs phyag stong spyan stong gzungs/</title>
+                <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Thousand-Armed, Thousand-Eyed, Avalokiteśvara</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa' spyan ras gzigs dbang phyug phyag stong spyan stong dang ldan pa thogs pa mi mnga' ba'i thugs rje chen po'i sems rgya cher yongs su rdzogs pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="en">The Incantation of the Thousand-Armed, Thousand-Eyed, Avalokiteśvara</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa' spyan ras gzigs dbang phyug phyag stong spyan stong dang ldan pa thogs pa mi mnga' ba'i thugs rje chen po'i sems rgya cher yongs su rdzogs pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="zh">千手千眼觀世音菩薩陀羅尼（千手千眼觀世音菩薩廣大圓滿無礙大悲心陀羅尼經）</title>
+                <title type="otherTitle" xml:lang="zh">《千手千眼觀世音菩薩陀羅尼》（千手千眼觀世音菩薩廣大圓滿無礙大悲心陀羅尼經）</title>
                 <author role="translatorMain" ref=""/>
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E Ho Gu, Likai Gu, Lilian Gu</sponsor>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date/>
+                </edition>
+            </editionStmt>
             <publicationStmt status="">
                 <idno xml:id="UT22084-093-006"/>
             </publicationStmt>
@@ -21,9 +24,8 @@
                 <bibl key="toh691" type="text">
                     <ref>Toh 691</ref>
                     <biblScope>vol.93, ff.94v-129v(pp.188-258)</biblScope>
-                    <location count-pages="71">
-                        <start volume="93" page="190"/>
-                        <end volume="93" page="260"/>
+                    <location work="UT4CZ5369" count-pages="71">
+                        <volume number="93" start-page="188" end-page="258"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12431" work="W22084"/>
@@ -31,16 +33,16 @@
                 <bibl key="toh897" type="text">
                     <ref>Toh 897</ref>
                     <biblScope>vol.100, ff.168r-205r(pp.335-409)</biblScope>
-                    <location count-pages="75">
-                        <start volume="100" page="337"/>
-                        <end volume="100" page="411"/>
+                    <location work="UT4CZ5369" count-pages="75">
+                        <volume number="100" start-page="335" end-page="409"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12659" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 13/02/2019 at 08:50:17 by admin</note>
+                <note type="lastUpdated" date-time="2022-07-26T07:43:03.124Z" user="admin">26/07/2022 07:43:03</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:43:01.139Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
